<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.WalletFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/black"
        android:text="@string/wallet"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_15sdp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginHorizontal="@dimen/_13sdp"
        app:cardElevation="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardMaxElevation="@dimen/_25sdp"
        app:strokeColor="@color/black"
        app:strokeWidth="@dimen/_1sdp"
        android:outlineSpotShadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:textColor="@color/black"
                android:text="@string/available_balance"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp" />
            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/_0_00"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_5sdp"
                android:textSize="@dimen/_16sdp" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addMoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_money"
                android:background="@drawable/button_bg"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibold"
                android:textAllCaps="false"
                android:textSize="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_25sdp"
                />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>
</layout>