<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.ProfileFragment"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/billings"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_16sdp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginHorizontal="@dimen/_14sdp"
            app:cardElevation="@dimen/_25sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardMaxElevation="@dimen/_25sdp"
            app:strokeColor="@color/black"
            app:strokeWidth="@dimen/_1sdp"
            android:outlineSpotShadowColor="@color/black"
            android:outlineAmbientShadowColor="@color/black"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical"
                >


                <TextView
                    android:id="@+id/tvInvoices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:text="@string/invoices"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/tvInstantPay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:text="@string/instant_pay"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_13sdp" />


                <TextView
                    android:id="@+id/tvReport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_semibold"
                    android:textColor="@color/black"
                    android:text="@string/report"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</layout>